// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image props should render with prop alt 1`] = `
<div
  class="image-container"
>
  <div
    class="cover"
    style="background-color: rgb(43, 138, 198);"
  />
   
  <!---->
</div>
`;

exports[`Image props should render with prop color 1`] = `
<div
  class="image-container"
>
  <div
    class="cover"
    style="background-color: rgb(255, 255, 255);"
  />
   
  <!---->
</div>
`;

exports[`Image props should render with prop url 1`] = `
<div
  class="image-container"
>
  <div
    class="cover"
    style="background-color: rgb(43, 138, 198);"
  />
   
  <img
    class="image"
    src="http://foo.bar"
    style="height: 0px;"
  />
</div>
`;

exports[`Image props should render without props 1`] = `
<div
  class="image-container"
>
  <div
    class="cover"
    style="background-color: rgb(43, 138, 198);"
  />
   
  <!---->
</div>
`;
